examples/test/testpolicy17595.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17595
  namespace: namespace13
spec:
  podSelector:
    matchLabels:
      key29: value11
      key19: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value13
          key5: value45
      podSelector:
        matchLabels:
          key47: value7
          key4: value3
